<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context="com.example.myapplication.MainActivity">

    <!-- Your existing RelativeLayout with background image and text views -->
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background_text"
            android:layout_width="2179dp"
            android:layout_height="450dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-890dp"
            android:layout_marginTop="279dp"
            android:src="@drawable/background_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout3"
        android:layout_width="1700px"
        android:layout_height="800px"
        android:layout_marginLeft="800px"
        android:layout_marginBottom="550px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/map"
            android:layout_width="1600px"
            android:layout_height="700px"
            android:layout_centerInParent="true"
            android:src="@drawable/map" />

        <ImageView
            android:id="@+id/car"
            android:layout_width="150px"
            android:layout_height="155px"
            android:layout_marginLeft="305px"
            android:layout_marginTop="95px"
            android:src="@drawable/car" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/buttonSetupBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="934dp"
            android:layout_marginTop="564dp"
            android:text="@string/setupBluetooth" />

        <TextView
            android:id="@+id/textViewValueLabel"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelBluetooth"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="9dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/textViewValueStatus"
            android:paddingLeft="30dp"
            android:text="@string/textview_status"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelX"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewValueLabel"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/textViewValueX"
            android:paddingLeft="30dp"
            android:text="@string/x_Value"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelY"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelX"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/textViewValueY"
            android:paddingLeft="30dp"
            android:text="@string/y_Value"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/TextViewLableAngle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelY"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/TextViewValueAngle"
            android:paddingLeft="30dp"
            android:text="@string/angle_Value"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelDistanceFront"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextViewLableAngle"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceFront"
            android:paddingLeft="30dp"
            android:text="@string/distance_front_value"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelBluetooth"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="300dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@+id/textViewValueBluetooth"
            android:paddingLeft="30dp"
            android:text="@string/bluetooth_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textViewValueBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelBluetooth"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/textViewLabelDistanceBackSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelDistanceFrontSide"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceBackSide"
            android:paddingLeft="30dp"
            android:text="@string/distance_back_side_value"
            android:textSize="20dp" />
        //////////////////////////////////


        <TextView
            android:id="@+id/text_parking_slot_1x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelDistanceBackSide"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceBackSide"
            android:paddingLeft="30dp"
            android:text="@string/parking_slot_1x"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_parking_slot_1y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_parking_slot_1x"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="1dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceBackSide"
            android:paddingLeft="30dp"
            android:text="@string/parking_slot_1y"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewValueLabel"
            android:layout_alignTop="@+id/textViewValueLabel"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueX"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignBaseline="@+id/textViewLabelX"
            android:layout_alignTop="@+id/textViewLabelX"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/textViewValueY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelY"
            android:layout_alignTop="@+id/textViewLabelY"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp"></TextView>

        <TextView
            android:id="@+id/TextViewValueAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextViewLableAngle"
            android:layout_alignTop="@+id/TextViewLableAngle"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueDistanceFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelDistanceFront"
            android:layout_alignTop="@+id/textViewLabelDistanceFront"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelDistanceBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelDistanceFront"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceBack"
            android:paddingLeft="30dp"
            android:text="@string/distance_back_value"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueDistanceBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelDistanceBack"
            android:layout_alignTop="@+id/textViewLabelDistanceBack"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewLabelDistanceFrontSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLabelDistanceBack"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/textViewValueDistanceFrontSide"
            android:paddingLeft="30dp"
            android:text="@string/distance_front_side_value"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueDistanceFrontSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelDistanceFrontSide"
            android:layout_alignTop="@+id/textViewLabelDistanceFrontSide"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValueDistanceBackSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewLabelDistanceBackSide"
            android:layout_alignTop="@+id/textViewLabelDistanceBackSide"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />
        ///////////

        <TextView
            android:id="@+id/textViewValue_parking_slot_1x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_parking_slot_1x"
            android:layout_alignTop="@+id/text_parking_slot_1x"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewValue_parking_slot_1y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_parking_slot_1y"
            android:layout_alignTop="@+id/text_parking_slot_1y"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:paddingRight="1000dp"
            android:textSize="20dp" />


        <ToggleButton
            android:id="@+id/toggleMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonSetupBluetooth"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:onClick="onToggleClicked"
            android:text="@string/togglebutton"
            android:textOff="SCOUT"
            android:textOn="SCOUT" />


    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>